# Wizards

./: CMakeLists.txt  Hogwards.h  Hogwarts.h  README.md  game.cpp  game_translate.cpp
classes/: Action.h  Action_Block.h  Action_Damage.h  Game.cpp  Game.h  Round.cpp  Round.h  Spell.cpp  Spell.h  Wand.h  Wizard.cpp  Wizard.h  debug.h  global.cpp  global.h
